<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Renato Botura</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Hi, my name is RENATO.
\n\nI love GAMES.
\n\nThe kind that is GAMES and GAMES around in an PC or NOTEBOOK, or a PLAYSTATION, and definitely the COMPUTER.
\nFun fact is that I have several GAMES and also a COMPUTER.
\n\nI like eating GAMES, too. Raw GAMES. Grilled GAMES. Smoked GAMES. Poached GAMES - not so much.
\nAnd sometimes I even go GAMING.
\nAnd even less sometimes, I actually catch something.
\n\nOnce, when I was camping in Canada, and very hungry, I even caught a large GAME with my hands.
\n\nI\'ll be happy to teach you how to make your own GAME.
\nYou should ask someone else about GAMES, though.\n\n</string>

    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
</resources>